2005-06-01  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document change to signature of project().

	* src/pydo/__init__.py: use getall to make the package's __all__
	nicer. 

	* src/pydo/utils.py (getall): function for coalescing __all__ of
	submodules into the package namespace's __all__.

2005-05-31  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO.project): change to signature: take
	fields as positional parameters rather than a tuple (saves typing
	and is easier for tuples of length one).

	* src/pydo/multifetch.py (iterfetch): correction to docstring.

	* src/pydo/base.py (PyDO._joinTableSQL, PyDO.updateSome)
	(PyDO._uniqueWhere, PyDO._processWhere, PyDO.joinTable):
	more refactoring to get bind variable conversion to work correctly
	with paramstyles that keep bind variables in dictionaries and
	generate interpolation keys. 

2005-05-31  Tim Golden  <mail@timgolden.me.uk>

        * src/pydo/drivers/mssqlconn.py: more precise handling of
        identity / sequence detection (only consider something as
        a sequence if it is not null, an identity and a primary key).
        Also correct a type which had the wrong sql executed when
        looking for unique constraints.

2005-05-31  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO._update_raw): *partial* fix for bug found
	by Hamish Lawson -- the accumulation of bind variables is broken
	for parastyles that store values in a dictionary.  This fix is for
	_update_raw, but there more methods to be repaired.

	* doc/manual.rst: document the refinement in null treatment in
	fetch. 

	* src/pydo/multifetch.py (iterfetch): add a little intelligence
	about whether to map an object with all null values to None. 

	* src/pydo/base.py (arrayfetch): note in docstring that this
	function is deprecated.

	* src/pydo/joins.py: note in docstring that this module is
	deprecated. 

	* src/pydo/operators.py: removed redundancy in docstring.
